--- a/templates/item_form.html
+++ b/templates/item_form.html
@@ -1,10 +1,12 @@
+{% load static %}
+{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Item Form</title>
-    <link rel="stylesheet" href="../assets/vendor/bootstrap.css">
+    <link rel="stylesheet" href="{% static 'vendor/bootstrap.css' %}">
 </head>
 <body class="container mt-5">
     <h1 class="mb-4">Item Form</h1>
